<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUP"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_tab"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="20dp"
        android:hint="@string/enter_name"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_tab"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="20dp"
        android:hint="@string/enter_email"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_tab"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="20dp"
        android:hint="@string/enter_phone_number"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNo"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_tab"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passWord"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_tab"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:hint="@string/confirm_password"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_custom"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        android:backgroundTint="@color/teal_200"/>

    <ProgressBar
        android:id="@+id/pBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>


</RelativeLayout>