<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/login_screen"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_tab"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="20dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="password"
        android:background="@drawable/custom_tab"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passWord"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passWord"
        android:layout_marginStart="230dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_custom"
        android:backgroundTint="#3F51B5"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/or_login_using"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"/>

    <ImageView
        android:id="@+id/fbBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="550dp"
        android:layout_marginStart="130dp"
        android:background="@drawable/facebook" />

    <ImageView
        android:id="@+id/gBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="550dp"
        android:layout_marginStart="220dp"
        android:background="@drawable/google"
        />


</RelativeLayout>






